# waypoint-diffuser

./: .gitignore  .pre-commit-config.yaml  README.md  push_t.py  pyproject.toml  train_diffusion.py
data/: normal_diffusion_no_replan_rewards_0.npy  normal_diffusion_no_replan_rewards_1.npy  normal_diffusion_no_replan_rewards_2.npy  normal_diffusion_replan_rewards_0.npy  normal_diffusion_replan_rewards_1.npy  normal_diffusion_replan_rewards_2.npy  waypoint_diffusion_rewards_0.npy  waypoint_diffusion_rewards_1.npy  waypoint_diffusion_rewards_2.npy
src/: diffusion_network.py  eval_diffusion.py  eval_waypoint.py  plot_reward.py  push_t_dataset.py  train_diffusion.py  train_waypoint.py  waypoint_network.py
